# LectureNotesWatermark

./: .gitignore  CMakeLists.txt  LectureNotesWaterMark.sln  README.md  script.csh  script.csh_bk  script_createpost.sh  script_download.sh  script_info.sh  script_lecturenote.sh  script_rename.sh  script_watermark.sh
CreatePost/: CMakeLists.txt  main.cpp  script.sh
LectureNotesWaterMark/: LectureNotesWaterMark.vcxproj  main.cpp
